Adjusted the carousel to resolve overlapping issue

--- a/client-side/src/home/Home.css
+++ b/client-side/src/home/Home.css
@@ -18,6 +18,8 @@
 .carousel-item {
   display: none;
   width: 100%;
+  align-items: center;
+  align-content: center;
 }
 
 .carousel-item.active {
@@ -26,8 +28,9 @@
 
 .carousel-item img {
   width: 100%;
-  height: 400px;
+  height: 40rem;
   object-fit: cover;
+  border-radius: 20px;
 }
 
 .home__body {
@@ -117,25 +120,6 @@
   height: auto;
 }
 
-/* .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.overlay:hover {
-  opacity: 1;
-} */
-
 .button {
   background-color: #007bff;
   color: #fff;
@@ -163,4 +147,5 @@
 
 div .home {
   max-width: 100rem;
+  padding: 1rem;
 }
